test/bad/functions/variadic09.px

func f(...s: String): Void def
    return
